<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.micronaut.platform</groupId>
        <artifactId>micronaut-parent</artifactId>
        <version>4.10.8</version>
        <relativePath/>
    </parent>

    <groupId>example.micronaut</groupId>
    <artifactId>micronaut-hello-rest-maven-layered</artifactId>
    <version>0.1</version>
    <description>Layered native demo project for Micronaut</description>

    <properties>
        <packaging>jar</packaging>
        <jdk.version>25</jdk.version>
        <release.version>25</release.version>
        <native.maven.plugin.version>0.11.2</native.maven.plugin.version>
        <micronaut.version>4.10.8</micronaut.version>
        <micronaut.runtime>netty</micronaut.runtime>
        <micronaut.aot.enabled>false</micronaut.aot.enabled>
        <micronaut.aot.packageName>example.micronaut.layered.aot.generated</micronaut.aot.packageName>
        <app.main.class>example.micronaut.layered.single.HelloEnglish</app.main.class>
        <app.image.name>hello-english</app.image.name>
        <exec.mainClass>${app.main.class}</exec.mainClass>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.micronaut</groupId>
            <artifactId>micronaut-runtime</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micronaut</groupId>
            <artifactId>micronaut-http-server-netty</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micronaut.serde</groupId>
            <artifactId>micronaut-serde-jackson</artifactId>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>io.micronaut.maven</groupId>
                <artifactId>micronaut-maven-plugin</artifactId>
                <configuration>
                    <configFile>aot-${packaging}.properties</configFile>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>${native.maven.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths combine.children="append">
                        <path>
                            <groupId>io.micronaut</groupId>
                            <artifactId>micronaut-http-validation</artifactId>
                            <version>${micronaut.core.version}</version>
                        </path>
                        <path>
                            <groupId>io.micronaut.serde</groupId>
                            <artifactId>micronaut-serde-processor</artifactId>
                            <version>${micronaut.serialization.version}</version>
                            <exclusions>
                                <exclusion>
                                    <groupId>io.micronaut</groupId>
                                    <artifactId>micronaut-inject</artifactId>
                                </exclusion>
                            </exclusions>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-Amicronaut.processing.group=example.micronaut</arg>
                        <arg>-Amicronaut.processing.module=micronaut-hello-rest-maven-layered</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>native</id>
            <properties>
                <packaging>jar</packaging>
            </properties>
        </profile>

        <profile>
            <id>standalone</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>default-shade</id>
                                <configuration>
                                    <skip>true</skip>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <imageName>${app.image.name}</imageName>
                            <mainClass>${app.main.class}</mainClass>
                            <buildArgs combine.children="append">
                                <buildArg>--initialize-at-run-time=io.netty.buffer</buildArg>
                                <buildArg>--initialize-at-run-time=io.netty.channel</buildArg>
                                <buildArg>--initialize-at-run-time=io.netty.handler</buildArg>
                                <buildArg>--initialize-at-run-time=io.netty.resolver</buildArg>
                                <buildArg>--initialize-at-run-time=io.netty.util</buildArg>
                                <buildArg>--initialize-at-run-time=io.netty.bootstrap</buildArg>
                                <buildArg>--initialize-at-run-time=java.sql.Date,java.sql.Time,java.sql.Timestamp</buildArg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>app-layer</id>
            <dependencies>
                <dependency>
                    <groupId>example.micronaut</groupId>
                    <artifactId>base-layer</artifactId>
                    <version>0.1</version>
                </dependency>
            </dependencies>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>default-shade</id>
                                <configuration>
                                    <skip>true</skip>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${native.maven.plugin.version}</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>compile-no-fork</goal>
                                </goals>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <imageName>${app.image.name}</imageName>
                            <mainClass>${app.main.class}</mainClass>
                            <buildArgs combine.children="append">
                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
                                <buildArg>--add-exports=java.base/jdk.internal.misc=org.graalvm.nativeimage.guest</buildArg>
                                <buildArg>--add-exports=org.graalvm.nativeimage.base/com.oracle.svm.sdk.staging.hosted.layeredimage=ALL-UNNAMED</buildArg>
                                <buildArg>--add-exports=org.graalvm.nativeimage.base/com.oracle.svm.sdk.staging.layeredimage=ALL-UNNAMED</buildArg>
                                <buildArg>-H:LayerUse=../base-layer/target/base-layer.nil</buildArg>
                                <buildArg>-H:LinkerRPath=$ORIGIN</buildArg>
                                <buildArg>-H:+RelativeCodePointers</buildArg>
                                <buildArg>--initialize-at-run-time=io.netty.buffer</buildArg>
                                <buildArg>--initialize-at-run-time=io.netty.channel</buildArg>
                                <buildArg>--initialize-at-run-time=io.netty.handler</buildArg>
                                <buildArg>--initialize-at-run-time=io.netty.resolver</buildArg>
                                <buildArg>--initialize-at-run-time=io.netty.util</buildArg>
                                <buildArg>--initialize-at-run-time=io.netty.bootstrap</buildArg>
                                <buildArg>--initialize-at-run-time=java.sql.Date,java.sql.Time,java.sql.Timestamp</buildArg>
                                <buildArg>-H:-UnlockExperimentalVMOptions</buildArg>
                            </buildArgs>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-resources-plugin</artifactId>
                        <version>3.3.1</version>
                        <executions>
                            <execution>
                                <id>copy-base-layer</id>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>copy-resources</goal>
                                </goals>
                                <configuration>
                                    <outputDirectory>${project.build.directory}</outputDirectory>
                                    <resources>
                                        <resource>
                                            <directory>../base-layer/target</directory>
                                            <includes>
                                                <include>libjavabaselayer.so</include>
                                            </includes>
                                            <filtering>false</filtering>
                                        </resource>
                                    </resources>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>hello-app</id>
            <properties>
                <app.main.class>example.micronaut.layered.single.${hello.class}</app.main.class>
                <app.image.name>${hello.image}</app.image.name>
            </properties>
            <build>
                <directory>${project.basedir}/target/${app.image.name}-build</directory>
                <finalName>${app.image.name}</finalName>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <configuration>
                            <includes>
                                <include>example/micronaut/layered/single/BaseSingleLanguageApplication.java</include>
                                <include>example/micronaut/layered/single/${hello.class}.java</include>
                            </includes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
